--- a/src/widget.html
+++ b/src/widget.html
@@ -20,13 +20,12 @@
   </div>
 
   <div>
-    <a
-      id="buildship-chat-widget__branding"
-      href="https://buildship.com"
-      target="_blank"
-      >Powered by&nbsp;<span>BuildShip</span></a
-    >
-  </div>
+  <a 
+    id="buildship-chat-widget__branding"
+    href="https://brainstemx.com"
+    target="_blank"
+  >Powered by&nbsp;<span>BrainstemX</span></a>
+</div>
 </div>
 <div id="buildship-chat-widget__body">
   <!-- The messages_history div is placed here. -->
